--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@
                 {% else %}
                 {% raw %}
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/index.html?lang={{lang}}">{{texts[12]}}</a>
+                    <a class="nav-link js-scroll-trigger" href="./index.html?lang={{lang}}">{{texts[12]}}</a>
                 </li>
                 {% endraw %}
                 {% endif %}
