--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
                     <a class="nav-link js-scroll-trigger" href="#about">{{texts[0]}}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../quickstart.html">{{texts[36]}}</a>
+                    <a class="nav-link" href="../quickstart.html">Quickstart</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
